# sqlcsv-exporter

./: .gitignore  LICENSE  README.md  pyproject.toml
src/sqlcsv_exporter/: __init__.py  __main__.py  cli.py  config.py  connection.py  exporter.py  sql_rewriter.py
tests/: test_config.py  test_connection.py  test_exporter.py  test_sql_rewriter.py
